--- a/commerce/auctions/templates/auctions/listing_list.html
+++ b/commerce/auctions/templates/auctions/listing_list.html
@@ -9,13 +9,12 @@
           <img class="rounded-circle article-img" src="{{ object.img_url }}">
           <div class="media-body">
             <div class="article-metadata">
-              <a class="mr-2" href="#">{{ object.user.username }}</a>
-              <small class="text-muted">{{ object.category }}</small>
+                <a class="mr-2" href="#">{{ object.user.username }}</a>
+                <small class="text-muted">{{ object.category }}</small>
             </div>
-            <h4 class="article-title" href="#">{{ object.title }}</h4>
+            <h4><a class="article-title" href="{% url 'listing_detail' object.id %}">{{ object.title }}</a></h4>
             <p class="article-content">{{ object.description }}</p>
           </div>
         </article>
-
 {% endfor %}
 {% endblock %}
