--- a/commerce/auctions/templates/auctions/listing_detail.html
+++ b/commerce/auctions/templates/auctions/listing_detail.html
@@ -1,43 +1,44 @@
 {% extends "auctions/layout.html" %}
+{% load crispy_forms_tags %}
 
 {% block body %}
 <div>
     <h2>Listing: {{object.title}}</h2>
 </div>
-<!--    <article class="media content-section">-->
-<!--          <img class="rounded-circle article-img" src="{{ object.img_url }}">-->
-<!--          <div class="media-body">-->
-<!--            <div class="article-metadata">-->
-<!--                <a class="mr-2" href="#">{{ object.user.username }}</a>-->
-<!--                <small class="text-muted">{{ object.category }}</small>-->
-<!--            </div>-->
-<!--            <h4 class="article-title">{{ object.title }}</h4>-->
-<!--            <p class="article-content">{{ object.description }}</p>-->
-<!--          </div>-->
-<!--        </article>-->
     <div class="container" style="padding-left: 0;">
-        <div class="content-section" style="border: 0px">
+        <div>
             <img src="{{ object.img_url }}">
         </div>
+        <br>
         <div>
-            <h2 style="font-weight: bold;">${{ object.starting_bid }}.00</h2>
-        </div>
-        <div>
-<!--            form to update bid-->
-        </div>
-        <div>
-            <h5>Description</h5>
             <p class="article-content">{{ object.description }}</p>
+        </div>
+        <br>
+        <div>
+            <h3 style="font-weight: bold;">${{ object.starting_bid }}.00</h3>
+        </div>
+        <div>
+            <form action="{% url 'listing_detail' object.pk %}" method='post'>
+                {% csrf_token %}
+                {{ form|crispy }}
+                <div class="form-group mt-4">
+                    <button class="btn btn-outline-info" type="submit">Place bid</button>
+                </div>
+            </form>
         </div>
         <div>
             <h5>Details</h5>
             <ul>
                 <li>Listed by: {{ object.user.username }}</li>
-                <li>Category: {{ object.category }}</li>
+                {% if object.category %}
+                    <li>Category: {{ object.category }}</li>
+                {% else %}
+                    <li>Category: No category listed</li>
+                {% endif %}
+                {% if object.date_listed %}
+                     <li>Created: {{ object.date_listed }} </li>
+                {% endif %}
             </ul>
         </div>
-
-
-
     </div>
 {% endblock %}
