--- a/commerce/auctions/templates/auctions/listing_form.html
+++ b/commerce/auctions/templates/auctions/listing_form.html
@@ -7,6 +7,7 @@
 {% block body %}
 <h1>Create new listing</h1>
 <div class="content-section">
+    {% if user.is_authenticated %}
     <form action="{% url 'new_listing' %}" method="post">
         {% csrf_token %}
         {{ form.title|as_crispy_field }}
@@ -26,5 +27,6 @@
             <button class="btn btn-outline-info" type="submit">Create listing</button>
         </div>
     </form>
+    {% endif %}
 </div>
 {% endblock %}
