--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -11,27 +11,27 @@
     </head>
     <body>
         <header class="site-header">
-          <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
-            <div class="container">
-              <a class="navbar-brand mr-4" href="/">HogwartsBay</a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarToggle">
-                <div class="navbar-nav mr-auto">
-                  <a class="nav-item nav-link" href="/about">About</a>
+            <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+                <div class="container">
+                    <a class="navbar-brand mr-4" href="/">HogwartsBay</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarToggle">
+                        <div class="navbar-nav mr-auto">
+                            <a class="nav-item nav-link" href="/about"></a>
+                        </div>
+                        <div class="navbar-nav">
+                            {% if user.is_authenticated %}
+                            <a class="nav-item nav-link" href="{% url 'logout' %}">Log Out</a>
+                            {% else %}
+                            <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                            <a class="nav-item nav-link" href="{% url 'login' %}">Log In</a>
+                            {% endif %}
+                        </div>
+                    </div>
                 </div>
-                <div class="navbar-nav">
-                    {% if user.is_authenticated %}
-                    <a class="nav-item nav-link" href="{% url 'logout' %}">Log Out</a>
-                    {% else %}
-                    <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
-                    <a class="nav-item nav-link" href="{% url 'login' %}">Log In</a>
-                    {% endif %}
-                </div>
-              </div>
-            </div>
-          </nav>
+            </nav>
         </header>
         <main role="main" class="container">
             <div class="row">
@@ -50,12 +50,15 @@
                             <li class="list-group-item list-group-item-light">
                                 <a href="{% url 'index' %}">Active Listings</a>
                             </li>
+                            <li class="list-group-item list-group-item-light">
+                                <a href="{% url 'category' %}">Categories</a>
+                            </li>
                             {% if user.is_authenticated %}
                             <li class="list-group-item list-group-item-light">
                                 <a href="{% url 'new_listing' %}">Create listing</a>
                             </li>
                             <li class="list-group-item list-group-item-light">
-                                <a href="{% url 'watchlist' %}">Watchlist</a>
+                                <a href="{% url 'watchlist' user.pk %}">Watchlist</a>
                             </li>
                             {% endif %}
                         </ul>
